(wip) signed cookies

--- a/public/login/index.html
+++ b/public/login/index.html
@@ -4,11 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <meta http-equiv="refresh"
+        content="0; URL=https://allthecloudbits.auth.us-east-1.amazoncognito.com/login?response_type=token&client_id=3al3r1fatr213ndvp2uoqcfgi9&redirect_uri=https://allthecloudbits.com/login/redirect.html" />
+    <title>redirect with auth</title>
 </head>
 
 <body>
-    <h1>Login Page</h1>
+    <h1>/login/index.html</h1>
+    <h3>redirecting</h3>
+    <!-- <script>
+        document.location = "https://allthecloudbits.auth.us-east-1.amazoncognito.com/login?response_type=token&client_id=3al3r1fatr213ndvp2uoqcfgi9&redirect_uri=https://allthecloudbits.com/login/redirect.html"
+    </script> -->
 </body>
 
 </html>
