--- a/public/login/index.html
+++ b/public/login/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh"
         content="0; URL=https://allthecloudbits.auth.us-east-1.amazoncognito.com/login?response_type=token&client_id=3al3r1fatr213ndvp2uoqcfgi9&redirect_uri=https://allthecloudbits.com/login/redirect.html" />
-    <title>redirect with auth</title>
+    <title>redirect with authorization tokens</title>
 </head>
 
 <body>
-    <h1>/login/index.html</h1>
-    <h3>redirecting</h3>
-    <!-- <script>
-        document.location = "https://allthecloudbits.auth.us-east-1.amazoncognito.com/login?response_type=token&client_id=3al3r1fatr213ndvp2uoqcfgi9&redirect_uri=https://allthecloudbits.com/login/redirect.html"
-    </script> -->
+    <!-- <h1>/login/index.html</h1>
+    <h3>redirecting</h3> -->
+    <script>
+        //document.location = "https://allthecloudbits.auth.us-east-1.amazoncognito.com/login?response_type=token&client_id=3al3r1fatr213ndvp2uoqcfgi9&redirect_uri=https://allthecloudbits.com/login/redirect.html"
+    </script>
 </body>
 
 </html>
