--- a/public/login/redirect.html
+++ b/public/login/redirect.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>redirect with auth tokens</title>
+    <title>redirect with authorization tokens</title>
 </head>
 
 <body>
-    <h1>/login/redirect.html</h1>
-    <h3>redirecting with auth tokens</h3>
+    <!-- <h1>/login/redirect.html</h1>
+    <h3>redirecting with authorization tokens</h3> -->
     <script>
+        // redirecting with authorization tokens
         document.location = "/login/auth/?" + document.location.hash.substring(1)
     </script>
 </body>
